# Test-task-optimacros

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
server/: models.py  services.py  settings.py
templates/: error.html  form.html  result.html
tests/: test_api.py
