[tool.poetry]
name = "test-task-optimacros"
version = "0.1.0"
description = ""
authors = ["Alexander Kolesnikov <alexkolesnikov.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
requests = "^2.32.3"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
flake8 = "^7.1.1"
flake8-isort = "^6.1.1"
black = "^24.8.0"
dadata = "^21.10.1"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"
poetry-core = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]
src_paths = ["/home/alexander/test_tasks/test-task-optimacros"]